Fix [ff0cc861] that broke regular word-wrap in comments.
Now, both regular text and "long text without spaces" will wrap correctly.

--- a/ui/scss/component/_comments.scss
+++ b/ui/scss/component/_comments.scss
@@ -57,8 +57,7 @@
 
 .comment__message {
   white-space: pre-line;
-  word-wrap: break-word;
-  word-break: break-all;
+  word-break: break-word;
   margin-top: var(--spacing-s);
 }
 
